--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://codebylalit.github.io/spotify-clone",
   "eslintConfig": {
     "extends": [
       "react-app",
